--- a/zhouzh3-sugarcane-boot/src/main/resources/application.yml
+++ b/zhouzh3-sugarcane-boot/src/main/resources/application.yml
@@ -21,6 +21,9 @@ eureka:
         service-url:
             defaultZone: http://localhost:8761/eureka/
         registry-fetch-interval-seconds: 30   # 默认是30秒
+        register-with-eureka: true
+        fetch-registry: true
+
     instance:
         prefer-ip-address: true
         lease-renewal-interval-in-seconds: 10  # 续约频率
