--- a/zhouzh3-sugarcane-boot/src/main/resources/application.yml
+++ b/zhouzh3-sugarcane-boot/src/main/resources/application.yml
@@ -15,6 +15,9 @@ feign:
                 load-balancer:
                     enabled: true
 
+zhouzh3-sugarcane:
+    ribbon:
+        NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RoundRobinRule  # 轮询策略
 
 eureka:
     client:
