--- a/zhouzh3-sugarcane-boot/src/main/resources/application.yml
+++ b/zhouzh3-sugarcane-boot/src/main/resources/application.yml
@@ -7,6 +7,9 @@ spring:
             - optional:classpath:application-local.yml
     application:
         name: zhouzh3-sugarcane
+    cloud:
+        loadbalancer:
+            configurations: round-robin
 
 feign:
     client:
@@ -15,9 +18,7 @@ feign:
                 load-balancer:
                     enabled: true
 
-zhouzh3-sugarcane:
-    ribbon:
-        NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RoundRobinRule  # 轮询策略
+
 
 eureka:
     client:
