--- a/zhouzh3-sugarcane-boot/src/main/resources/application.yml
+++ b/zhouzh3-sugarcane-boot/src/main/resources/application.yml
@@ -11,14 +11,12 @@ spring:
         loadbalancer:
             configurations: round-robin
 
-feign:
-    client:
-        config:
-            default:
-                load-balancer:
-                    enabled: true
-
-
+#feign:
+#    client:
+#        config:
+#            default:
+#                load-balancer:
+#                    enabled: true
 
 eureka:
     client:
