--- a/zhouzh3-sugarcane-core/pom.xml
+++ b/zhouzh3-sugarcane-core/pom.xml
@@ -10,7 +10,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>zhouzh3-sugarcane-app</artifactId>
+    <artifactId>zhouzh3-sugarcane-core</artifactId>
 
     <properties>
 
@@ -21,29 +21,25 @@
             <groupId>com.zhouzh3</groupId>
             <artifactId>zhouzh3-sugarcane-api</artifactId>
         </dependency>
+        <!-- MapStruct -->
         <dependency>
-            <groupId>com.zhouzh3</groupId>
-            <artifactId>zhouzh3-sugarcane-core</artifactId>
-        </dependency>
-
-
-        <!-- Web支持 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.zhouzh3</groupId>
-            <artifactId>zhouzh3-common</artifactId>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
+
 </project>
