--- a/zhouzh3-sugarcane-boot/src/main/resources/application.yml
+++ b/zhouzh3-sugarcane-boot/src/main/resources/application.yml
@@ -13,7 +13,8 @@ spring:
         allow-bean-definition-overriding: true
     cloud:
         loadbalancer:
-            configurations: round-robin
+            cache:
+                enabled: false
 
 #feign:
 #    client:
