--- a/zhouzh3-sugarcane-boot/pom.xml
+++ b/zhouzh3-sugarcane-boot/pom.xml
@@ -51,10 +51,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.netflix.eureka</groupId>
-            <artifactId>eureka-client-jersey3</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.netflix.eureka</groupId>-->
+<!--            <artifactId>eureka-client-jersey3</artifactId>-->
+<!--        </dependency>-->
 
 
         <!-- Actuator -->
